kubernetes-networks/dashboard/dashboard-svc-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: kubernetes-dashboard
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8433
      targetPort: 8443
