kubernetes-networks/dashboard/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-tcp
  namespace: kubernetes-dashboard
  annotations:
    metallb.universe.tf/allow-shared-ip: "web.default.cluster.local"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.59.11
  externalTrafficPolicy: Local
  ports:
    - name: dnstcp
      protocol: TCP
      port: 8433
      targetPort: 443
  selector:
    k8s-app: kubernetes-dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-udp
  namespace: kubernetes-dashboard
  annotations:
    metallb.universe.tf/allow-shared-ip: "web.default.cluster.local"
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.59.11
  externalTrafficPolicy: Local
  ports:
    - name: dnsudp
      protocol: UDP
      port: 8433
      targetPort: 433
  selector:
    k8s-app: kubernetes-dashboard
