kubernetes-networks/dashboard/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: minikube.dashboard.io
    http:
      paths:
      - 
        pathType: Prefix
        path: /dashboard
        backend:
          service: 
            name: dashboard-svc
            port:
              number: 8433
